# gmail-codex-bridge

./: .gitignore  AGENTS.md  README.md  config.example.toml  package.json  pnpm-lock.yaml  pyproject.toml
docs/: ARCHITECTURE.md  INSTALLATION.md
scripts/: codex-runner.mjs  install-task.ps1  install.ps1  start.ps1  stop.ps1  uninstall.ps1
skills/gmail-codex-report/: SKILL.md
src/gmail_codex_bridge/: __init__.py  cli.py  codex.py  config.py  database.py  gmail.py  html_email.py  models.py  secrets.py  service.py
tests/: test_bridge.py  test_codex.py  test_gmail.py  test_html_email.py  test_secrets.py
